Tweak the line height for field labels, fixing alignment issues

--- a/modules/portal/app/assets/css/portal/_mixins.scss
+++ b/modules/portal/app/assets/css/portal/_mixins.scss
@@ -15,6 +15,7 @@
   text-transform: uppercase;
   color: var(--secondary);
   font-weight: 500;
+  line-height: $line-height-base;
 }
 
 %small-muted {
